# stage-l3

./: .gitignore  CMakeLists.txt  README.md  clean.sh  debug.sh  release.sh
data/: imgui.ini
include/: Application.hpp  AssetManager.hpp  Camera.hpp  Cubemap.hpp  EventHandler.hpp  Framebuffer.hpp  Image.hpp  SceneGraph.hpp  Shader.hpp  Texture.hpp  Window.hpp  callbacks.hpp  debug.hpp
include/culling/: AABB.hpp  BoundingVolume.hpp  Frustum.hpp  Plane.hpp
include/entities/: DrawableEntity.hpp  Entity.hpp  FlatShadedMeshEntity.hpp  LineMeshEntity.hpp  MeshEntity.hpp  ModelEntity.hpp  SceneEntity.hpp  TerrainEntity.hpp  TriangleMeshEntity.hpp  entities.hpp
include/maths/: Transform.hpp  constants.hpp  functions.hpp  geometry.hpp  ivec3.hpp  mat3.hpp  mat4.hpp  quaternion.hpp  transforms.hpp  trigonometry.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/mesh/: Attribute.hpp  BetterMesh.hpp  LineMesh.hpp  MRMaterial.hpp  Material.hpp  Mesh.hpp  Model.hpp  PointMesh.hpp  Scene.hpp  Terrain.hpp  TriangleMesh.hpp  primitives.hpp
include/scene_graph/: Entity.hpp  SceneGraph.hpp  Transform.hpp
include/utility/: LifetimeLogger.hpp  Random.hpp  file_readers.hpp  hash.hpp  parsers.hpp
lib/cgltf/: cgltf.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: stb_image.cpp
shaders/: blinn-phong.frag  default.frag  default.vert  phong.frag
shaders/fragment/: background.frag  blinn_phong.frag  flat.frag  lambert.frag  metallic_roughness.frag  phong.frag  post_processing.frag
shaders/line_mesh/: line_mesh.frag  line_mesh.vert
shaders/point_mesh/: point_mesh.frag  point_mesh.vert
shaders/terrain/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert
shaders/vertex/: default.vert  position-only.vert  position_and_normal.vert  position_and_texcoords.vert  position_and_texcoords_no_mvp.vert  position_only-no_mvp.vert
src/: Application.cpp  AssetManager.cpp  Camera.cpp  Cubemap.cpp  EventHandler.cpp  Framebuffer.cpp  Image.cpp  SceneGraph.cpp  Shader.cpp  Texture.cpp  Window.cpp  callbacks.cpp  main.cpp
src/culling/: AABB.cpp  BoundingVolume.cpp  Frustum.cpp  Plane.cpp
src/entities/: DrawableEntity.cpp  Entity.cpp  FlatShadedMeshEntity.cpp  LineMeshEntity.cpp  MeshEntity.cpp  ModelEntity.cpp  SceneEntity.cpp  TerrainEntity.cpp  TriangleMeshEntity.cpp
src/maths/: Transform.cpp  functions.cpp  geometry.cpp  ivec3.cpp  mat3.cpp  mat4.cpp  quaternion.cpp  transforms.cpp  trigonometry.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/mesh/: Attribute.cpp  BetterMesh.cpp  LineMesh.cpp  MRMaterial.cpp  Material.cpp  Mesh.cpp  Model.cpp  PointMesh.cpp  Scene.cpp  Terrain.cpp  TriangleMesh.cpp  primitives.cpp
src/scene_graph/: Entity.cpp  SceneGraph.cpp  Transform.cpp
src/utility/: LifetimeLogger.cpp  Random.cpp  file_readers.cpp  hash.cpp  parsers.cpp
